--- a/ICLReader.html
+++ b/ICLReader.html
@@ -6,23 +6,20 @@
     <script src = "d3.min.js"></script>
   </head>
   <body>
-    <h1>Evacuate Room</h1>
-    <p>Circle Room - Wireless</p>
     <script>
       //////////----------Instantiate Variables----------//////////
       var fxs = [GoOutAtAngle, Wait, FollowWall, WaitFor, FollowWallFor, GoToCenter, WaitAverage];
 
+      var loading = true;
       var time = 0;
-      var timeText;
-      var frameText;
       var fps = 60;
       var timeMax = 10 * fps;
 
       var timeBox;
       var timeSlide;
-      var timeDirect = 0;
-
-      var selectText;
+      var timePlay;
+      var timePause;
+      var timeRewind;
 
       var projector;
       var fieldSVG;
@@ -30,6 +27,10 @@
                     (window.innerHeight) : (window.innerWidth)) / 5;
       var center = [unit2Px * 2, unit2Px * 2];
       var touristNum = 0;
+
+      var selectDown;
+      var selectText;
+      var selectUp;
 
       var tourColors = [];
       var tourists = [];
@@ -43,15 +44,13 @@
       var graphLines = [];
       var graphLine = [];
 
-      var exitAngle = 20;
-      var fieldExit = [center[0] + unit2Px * Math.cos(exitAngle * (Math.PI / 180)),
-                       center[1] - unit2Px * Math.sin(exitAngle * (Math.PI / 180))];
+      var exitAngle = 0;
+      var fieldExit = [center[0] + unit2Px, center[1]];
       var wireless = true;
-      var sendSignal = 0;
       var instruBinder = [
-                          [[0, [30]], [2, ['left']]],
-                          [[0, [-30]], [2, ['right']]],
-                          [[0, [30]], [4, ['right', 60]], [5, [null]], [1, [null]]]
+                          [[0, [45]], [3, [1]], [5, [null]], [0, [225]], [4, ["left", 90]], [2, ["right"]]],
+                          [[0, [-45]], [3, [1]], [5, [null]], [0, [135]], [4, ["right", 90]], [1, [null]]],
+                          [[6, [null]]]
                          ];
 
       //////////--------Instantiate Call Functions--------//////////
@@ -87,16 +86,13 @@
       //////////---------- Instantiate Classes ----------//////////
 //Data holder, and loader update
       class Tourist {
-        constructor (visual, instructions) {
+        constructor (visual) {
           this.number = touristNum;
-          touristNum++;
           this.visual = visual;
           this.knows = false;
-          this.target = null;
-          this.targeted = false;
-          this.instru = instructions;
           this.stamps = [];
           this.loadTime = 0;
+          //this.allowance = 0;
           this.on = 0;
           this.a = 0;
           this.x = center[0];
@@ -126,15 +122,12 @@
         if (who.on >= who.stamps.length) {
           who.a = value[0] * (Math.PI / 180);
           who.stamps.push([who.loadTime, who.a, who.x, who.y]);
-          who.loadTime += fps;
         }
-        if (time <= who.loadTime) {
-          var timePerc = (time - who.stamps[who.on][0]) / fps;
-          who.x = center[0] + unit2Px * Math.cos(who.a) * timePerc;
-          who.y = center[1] - unit2Px * Math.sin(who.a) * timePerc;
-        } else {
+        if ((who.x == center[0] + unit2Px * Math.cos(who.a)) && (who.y == center[1] - unit2Px * Math.sin(who.a))) {
           who.on++;
-          fxs[who.instru[who.on][0]](who, who.instru[who.on][1]);
+          fxs[instruBinder[who.number][who.on][0]](who, instruBinder[who.number][who.on][1]);
+        } else {
+          GoToPoint(who, [center[0] + unit2Px * Math.cos(who.a), center[1] - unit2Px * Math.sin(who.a)]);
         }
       }
 
@@ -145,26 +138,25 @@
         }
       }
 
-//Requirements: At wall		Params: null	Description: Follows wall at direction indefinitely
+//Requirements: At wall		Params: direction	Description: Follows wall at direction indefinitely
       function FollowWall(who, value) {
         if (who.on >= who.stamps.length) {
           who.stamps.push([who.loadTime, who.a, who.x, who.y]);
         }
         var dir = (value[0] == 'left') ? (1) : (-1);
-        who.a = who.stamps[who.on][1] + ((time - who.stamps[who.on][0]) / fps) * dir;
-        who.x = center[0] + unit2Px * Math.cos(who.a);
-        who.y = center[1] - unit2Px * Math.sin(who.a);
+        who.a += (1 / fps) * dir;
+        GoToPoint(who, [center[0] + unit2Px * Math.cos(who.a), center[1] - unit2Px * Math.sin(who.a)]);
       }
 
 //Requirements: None	Params: time	Description: Wait for x time
       function WaitFor(who, value) {
         if (who.on >= who.stamps.length) {
           who.stamps.push([who.loadTime, who.a, who.x, who.y]);
-          who.loadTime += Math.round(value[0] * fps);
+          who.loadTime = time + value[0] * fps;
         }
         if (time > who.loadTime) {
           who.on++;
-          fxs[who.instru[who.on][0]](who, who.instru[who.on][1]);
+          fxs[instruBinder[who.number][who.on][0]](who, instruBinder[who.number][who.on][1]);
         }
       }
 
@@ -172,16 +164,15 @@
       function FollowWallFor(who, value) {
         if (who.on >= who.stamps.length) {
           who.stamps.push([who.loadTime, who.a, who.x, who.y]);
-          who.loadTime += Math.round(value[1] * (Math.PI / 180) * fps);
+          who.loadTime = time + value[1] * (Math.PI / 180) * fps;
         }
         var dir = (value[0] == 'left') ? (1) : (-1);
-        if (time <= who.loadTime) {
-          who.a = who.stamps[who.on][1] + ((time - who.stamps[who.on][0]) / fps) * dir;
-          who.x = center[0] + unit2Px * Math.cos(who.a);
-          who.y = center[1] - unit2Px * Math.sin(who.a);
+        if (time < who.loadTime) {
+          who.a += (1 / fps) * dir;
+          GoToPoint(who, [center[0] + unit2Px * Math.cos(who.a), center[1] - unit2Px * Math.sin(who.a)]);
         } else {
           who.on++;
-          fxs[who.instru[who.on][0]](who, who.instru[who.on][1]);
+          fxs[instruBinder[who.number][who.on][0]](who, instruBinder[who.number][who.on][1]);
         }
       }
 
@@ -189,15 +180,12 @@
       function GoToCenter(who, value) {
         if (who.on >= who.stamps.length) {
           who.stamps.push([who.loadTime, who.a, who.x, who.y]);
-          who.loadTime += fps;
         }
-        if (time <= who.loadTime) {
-          var timePerc = (who.loadTime - time) / fps;
-          who.x = center[0] + unit2Px * Math.cos(who.a) * timePerc;
-          who.y = center[1] - unit2Px * Math.sin(who.a) * timePerc;
-        } else {
+        if ((who.x == center[0]) && (who.y == center[1])) {
           who.on++;
-          fxs[who.instru[who.on][0]](who, who.instru[who.on][1]);
+          fxs[instruBinder[who.number][who.on][0]](who, instruBinder[who.number][who.on][1]);
+        } else {
+          GoToPoint(who, center);
         }
       }
 
@@ -217,17 +205,9 @@
         }
         sumPosition[0] /= totalNum;
         sumPosition[1] /= totalNum;
-        var dLoc = [sumPosition[0] - who.x, sumPosition[1] - who.y];
-        var dist = Math.sqrt(Math.pow(dLoc[1], 2) + Math.pow(dLoc[0], 2));
-        if (dist < unit2Px / fps) {
-          who.x = sumPosition[0];
-          who.y = sumPosition[1];
-        } else {
-          var ang = Math.atan2(dLoc[1], dLoc[0]);
-          who.x = who.x + (unit2Px / fps) * Math.cos(ang);
-          who.y = who.y + (unit2Px / fps) * Math.sin(ang);
-        }
+        GoToPoint(who, sumPosition);
       }
+
 
 
 
@@ -236,9 +216,14 @@
       function Start() {
         //Background Visuals
         fieldSVG = d3.select("body").append("svg").attr("width", unit2Px * 4).attr("height", unit2Px * 4)
-                     .style("float", "left").style("border", "1px solid black");
+                     .style("float", "left").style("border", "1px solid black")
+                     .on("mousemove", ChoosExit).on("click", exitChosen);
         graphSVG = d3.select("body").append("svg").attr("width", unit2Px * 4).attr("height", unit2Px * 4)
                      .style("float", "left").style("border", "1px solid black");
+        fieldSVG.append("text").attr("x",  center[0]).attr("y", unit2Px * (1 / 5))
+                .style("text-anchor", "middle").style("font-size", unit2Px * (1 / 5)).text("Search and Exit");
+        fieldSVG.append("text").attr("x",  center[0]).attr("y", unit2Px * (3 / 10))
+                .style("text-anchor", "middle").style("font-size", unit2Px * (1 / 10)).text("Circle Wireless");
         fieldSVG.append("circle").attr("cx", center[0]).attr("cy", center[1]).attr("r", unit2Px)
                 .style("fill-opacity", 0.0).style("stroke", "#000000");
         //Tourist Visuals
@@ -247,6 +232,7 @@
           tourists.push(new Tourist(fieldSVG.append("circle").attr("cx", center[0]).attr("cy", center[1])
                                     .attr("r", unit2Px / 16)
                                     .style("fill", tourColors[i]), instruBinder[i]));
+          touristNum++;
           tourLines.push([]);
           graphDots.push(graphSVG.append("circle").attr("cx", unit2Px * (10 / 25))
                          .attr("cy", unit2Px * 4 * (20 / 25) - unit2Px * (10 / 25)).attr("r", unit2Px / 16)
@@ -255,7 +241,8 @@
         }
         //Unit Circle Visuals
         fieldSVG.append("circle").attr("cx", center[0]).attr("cy", center[1]).attr("r", 2).style("fill", "#000000");
-        fieldSVG.append("circle").attr("cx", fieldExit[0]).attr("cy", fieldExit[1]).attr("r", 2).style("fill", "#000000");
+        fieldSVG.append("circle").attr("class", "exit").attr("cx", fieldExit[0]).attr("cy", fieldExit[1]).attr("r", 2)
+                .style("fill", "#000000");
         fieldSVG.append("line").attr("x1", 2 * unit2Px).attr("y1", unit2Px).attr("x2",  2 * unit2Px).attr("y2", 3 * unit2Px)
                 .style("stroke", "#000000").style("stroke-width", .5);
         fieldSVG.append("line").attr("x1", unit2Px).attr("y1", 2 * unit2Px).attr("x2",  3 * unit2Px).attr("y2", 2 * unit2Px)
@@ -300,24 +287,6 @@
                 .style("font-size", unit2Px * (5 / 25)).style("fill", "#000000").text("Distance from Exit");
         graphSVG.append("text").attr("x", unit2Px * 2).attr("y", unit2Px * (395 / 100)).attr("text-anchor", "middle")
                 .style("font-size", unit2Px * (5 / 25)).style("fill", "#000000").text("Time");
-        //Loader Visual General
-        while (time <= timeMax) {
-          LoadAnim();
-        }
-        //Loader Visual Exit
-        time = 0;
-        projector = setInterval(AlterAnim, 1000 / fps);
-
-        /*for (var i = 0; i < tourists.length; i++) {
-          tourLine[i] = fieldSVG.append("path").attr("d", lineFx(tourLines[i]))
-                        .style("stroke", tourColors[i]).style("stroke-width", unit2Px * (1 / 25)).style("stroke-opacity", 0.5).style("fill", "none");
-          graphLine[i] = graphSVG.append("path").attr("d", lineFx(graphLines[i]))
-                         .style("stroke", tourColors[i]).style("stroke-width", unit2Px * (1 / 25)).style("stroke-opacity", 0.5).style("fill", "none");
-        }
-        time = 0;
-        timeDirect = 0;
-        UpdateInfo(0);
-        setInterval(PlayAnim, 1000 / fps);*/
       }
 
 //Create a random hexadecimal color
@@ -326,86 +295,65 @@
         RGB[0] = Math.floor(Math.random() * 256).toString(16);
         RGB[1] = Math.floor(Math.random() * 256).toString(16);
         RGB[2] = Math.floor(Math.random() * 256).toString(16);
-        for (var j = 0; j < 3; j++) {if (RGB[j].length == 1) {RGB[j] = '0' + RGB[j];}}
+        for (j = 0; j < 3; j++) {if (RGB[j].length == 1) {RGB[j] = '0' + RGB[j];}}
         return('#' + RGB[0] + RGB[1] + RGB[2]);
       }
 
-//Control times, update bots, update points and lines.
-      function LoadAnim() {
-        for (var i = 0; i < tourists.length; i++) {
-          fxs[tourists[i].instru[tourists[i].on][0]](tourists[i], tourists[i].instru[tourists[i].on][1]);
-          var dista = unit2Px * 4 - (Math.sqrt(Math.pow(fieldExit[0] - tourists[i].x, 2) + Math.pow(fieldExit[1] - tourists[i].y, 2)) * (20 / 25));
-          tourLines[i].push({x:tourists[i].x, y:tourists[i].y});
-          graphLines[i].push({x:(unit2Px * (10 / 25) + (time / timeMax) * (80 / 25) * unit2Px), y:(dista - unit2Px * (10 / 25))});
-        }
-        time++;
+//Controls exit positioning for user's choice
+      function ChoosExit() {
+        exitAngle = Math.atan2(d3.event.x - center[0], d3.event.y - center[1]) - (Math.PI / 2);
+        fieldExit = [center[0] + unit2Px * Math.cos(exitAngle), center[1] - unit2Px * Math.sin(exitAngle)];
+        d3.select(".exit").attr("cx", fieldExit[0]).attr("cy", fieldExit[1]);
       }
 
-      function AlterAnim() {
+//Turns off exit choosing events, and starts loading
+      function exitChosen() {
+        fieldSVG.on("mousemove", null).on("click", null);
+        projector = setInterval(LoadAnim, 1000 / fps);
+      }
+
+//Control times, and update bots
+      function LoadAnim() {
         if (time > timeMax) {
-          clearInterval(projector);
-          for (var i = 0; i < tourists.length; i++) {
-            tourLine[i] = fieldSVG.append("path").attr("d", lineFx(tourLines[i]))
-                          .style("stroke", tourColors[i]).style("stroke-width", unit2Px * (1 / 25)).style("stroke-opacity", 0.5).style("fill", "none");
-            graphLine[i] = graphSVG.append("path").attr("d", lineFx(graphLines[i]))
-                           .style("stroke", tourColors[i]).style("stroke-width", unit2Px * (1 / 25)).style("stroke-opacity", 0.5).style("fill", "none");
-          }
           UpdateInfo(0);
-          setInterval(PlayAnim, 1000 / fps);
+          clearInterval(projector);
+          projector = setInterval(PlayAnim, 1000 / fps);
         } else {
-          for (var i = 0; i < touristNum; i++) {
+          for (var i = 0; i < tourists.length; i++) {
             var who = tourists[i];
-            if (who.knows) {
-              if (wireless) {
-                GoToPoint(who, fieldExit)
-                AlterLines(i);
-              } else {
-                //Here is where a bot would go out to another, by comparing time distance, to their location.
-                if (who.target == null) {
-                  var shorTime = Infinity;
-                  for (var i = 0; i < tourists.length; i++) {
-                    if (i != who.number) {
-                      if (!tourists[i].knows) {
-                        if (!tourist.targeted) {
-                          var closestPt = Infinity;
-                          
-                        }
-                      }
-                    }
-                  }
-                }
-                //If equal, go to there to intercept, also check each robot (that doesn't know, or isn't being intercepted).
-              }
-            } else {
-              who.x = tourLines[i][time].x;
-              who.y = tourLines[i][time].y;
-              if (Math.sqrt(Math.pow(fieldExit[1] - who.y, 2) + Math.pow(fieldExit[0] - who.x, 2)) < (unit2Px / fps)) {
-                if (sendSignal < 1) {
-                  sendSignal++;
-                }
-                who.knows = true;
-              }
-            }
+            fxs[instruBinder[i][who.on][0]](who, instruBinder[i][who.on][1]);
             who.visual.attr("cx", who.x).attr("cy", who.y);
-            graphDots[i].attr("cx", graphLines[i][time].x).attr("cy", graphLines[i][time].y);
-          }
-          if (sendSignal == 1) {
-            for (var i = 0; i < tourists.length; i++) {
-              tourists[i].knows = true;
-            }
-            sendSignal++;
+            LoadLines(i);
           }
           time++;
-          timeText.text("Time: " + time / fps);
-          frameText.text("Frame: " + time);
           timeSlide.attr("x", (time / timeMax) * (31 / 8) * unit2Px);
+          timeBox.attr("width", (time / timeMax) * 4 * unit2Px);
         }
+        timeText.text("Time: " + Math.floor((10000 * time) / fps) / 10000);
+        frameText.text("Frame: " + time);
       }
 
-      function AlterLines(i) {
+//Create lines, and update graph dot positions, as well recreating image of path.
+      function LoadLines(i) {
         var dista = unit2Px * 4 - (Math.sqrt(Math.pow(fieldExit[0] - tourists[i].x, 2) + Math.pow(fieldExit[1] - tourists[i].y, 2)) * (20 / 25));
-        tourLines[i][time] = {x:tourists[i].x, y:tourists[i].y};
-        graphLines[i][time] = {x:(unit2Px * (10 / 25) + (time / timeMax) * (80 / 25) * unit2Px), y:(dista - unit2Px * (10 / 25))};
+        graphDots[i].attr("cx", (unit2Px * (10 / 25) + (time / timeMax) * (80 / 25) * unit2Px)).attr("cy", (dista - unit2Px * (10 / 25)));
+        if (time > 0) {
+          tourLines[i].push({x:tourists[i].x, y:tourists[i].y});
+          tourLine[i].remove();
+          tourLine[i] = fieldSVG.append("path").attr("d", lineFx(tourLines[i]))
+                        .style("stroke", tourColors[i]).style("stroke-width", 3).style("stroke-opacity", 0.5).style("fill", "none");
+          graphLines[i].push({x:(unit2Px * (10 / 25) + (time / timeMax) * (80 / 25) * unit2Px), y:(dista - unit2Px * (10 / 25))});
+          graphLine[i].remove();
+          graphLine[i] = graphSVG.append("path").attr("d", lineFx(graphLines[i]))
+                         .style("stroke", tourColors[i]).style("stroke-width", 3).style("stroke-opacity", 0.5).style("fill", "none");
+        } else {
+          tourLines[i].push({x:center[0], y:center[1]});
+          tourLine.push(fieldSVG.append("path").attr("d", lineFx(tourLines[i]))
+                        .style("stroke", tourColors[i]).style("stroke-width", 3).style("stroke-opacity", 0.5).style("fill", "none"));
+          graphLines[i].push({x:(unit2Px * (10 / 25) + (time / timeMax) * (80 / 25) * unit2Px), y:(dista - unit2Px * (10 / 25))});
+          graphLine.push(graphSVG.append("path").attr("d", lineFx(graphLines[i]))
+                         .style("stroke", tourColors[i]).style("stroke-width", 3).style("stroke-opacity", 0.5).style("fill", "none"));
+        }
       }
 
       function PlayAnim() {
@@ -427,8 +375,8 @@
           time += timeDirect;
           timeSlide.attr("x", (time / timeMax) * (31 / 8) * unit2Px);
         }
-          timeText.text("Time: " + time / fps);
-          frameText.text("Frame: " + time);
+        timeText.text("Time: " + Math.floor((10000 * time) / fps) / 10000);
+        frameText.text("Frame: " + time);
       }
 
       function UpdateInfo(delta) {
